<resources>
    <string name="app_name">TicTacToe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="title1">Welcome</string>
    <string name="title2">Compete</string>
    <string name="title3">Scoreboard</string>
    <string name="desc1">One of the oldest world games now available on your smartphone device!</string>
    <string name="desc2">Play the game with your friends, and prove that you’re a worthy opponent!</string>
    <string name="desc3">Earn points and make your own way to the top of the scoreboard!</string>
    <string name="username">Player</string>
    <string name="_0">0</string>
    <string name="wins">Wins</string>
    <string name="draws">Draws</string>
    <string name="losses">Losses</string>
    <string name="vs_friend">vs FRIEND</string>
    <string name="vs_cpu">vs CPU</string>
    <string name="settings">Settings</string>
    <string name="username_title">Username</string>
    <string name="player_title">Enter your username</string>
    <string name="opponent_title">Enter opponent username</string>
    <string name="save">Save</string>
    <string name="turn">Your turn</string>
    <string name="winner">is WINNER</string>
    <string name="draw">DRAW</string>
</resources>