<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Home">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat_regular"
        android:includeFontPadding="false"
        android:text="@string/title1"
        android:textSize="18sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_medium"
        android:includeFontPadding="false"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="24sp" />


    <LinearLayout
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginVertical="36dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat_medium"
                android:includeFontPadding="false"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:includeFontPadding="false"
                android:text="@string/wins"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="40dp"
            android:background="@color/light_grey" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat_medium"
                android:includeFontPadding="false"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:includeFontPadding="false"
                android:text="@string/losses"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="40dp"
            android:background="@color/light_grey" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat_medium"
                android:includeFontPadding="false"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:includeFontPadding="false"
                android:text="@string/draws"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            app:rippleColor="@color/light_blue"
            android:id="@+id/multiplayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/button_style"
            android:gravity="start|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingVertical="20dp"
            android:text="@string/vs_friend"
            android:textSize="24sp"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_multiplayer"
            app:iconPadding="20dp"
            app:iconSize="48dp"
            app:iconTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            app:rippleColor="@color/dark_blue"
            android:id="@+id/cpu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_style"
            android:gravity="start|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingVertical="20dp"
            android:text="@string/vs_cpu"
            android:textSize="24sp"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_cpu"
            app:iconPadding="20dp"
            app:iconSize="48dp"
            app:iconTint="@color/white" />

    </LinearLayout>
</RelativeLayout>