<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:strokeColor="@color/white"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="18dp"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/player_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_title"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_regular"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_title"
            app:boxStrokeColor="@color/blue"
            app:startIconDrawable="@drawable/ic_user">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@null"
            android:background="@drawable/button_style"
            android:text="@string/save"
            android:textSize="18sp"
            android:id="@+id/save"
            android:fontFamily="@font/montserrat_regular"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>