<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Game">

    <LinearLayout
        android:id="@+id/player_box"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="24sp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/blue"
            android:id="@+id/player_name"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="32sp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/blue"
            android:id="@+id/player_score"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn"
            android:textSize="32sp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:id="@+id/player_turn"/>
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent"
        android:id="@+id/board">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/p_1_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:tag="00"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:srcCompat="@drawable/placeholder" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/p_1_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:tag="01"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:srcCompat="@drawable/placeholder" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/p_1_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:tag="02"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:srcCompat="@drawable/placeholder" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/p_2_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:tag="10"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:srcCompat="@drawable/placeholder" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/p_2_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:tag="11"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:srcCompat="@drawable/placeholder" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/p_2_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:tag="12"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:srcCompat="@drawable/placeholder" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/p_3_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:tag="20"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:srcCompat="@drawable/placeholder" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/p_3_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:tag="21"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:srcCompat="@drawable/placeholder" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/p_3_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:tag="22"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:srcCompat="@drawable/placeholder" />
    </GridLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/win_line"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="4dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <View
                android:visibility="invisible"
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:background="@color/black" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <View
                android:visibility="invisible"
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:background="@color/black" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <View
                android:visibility="invisible"
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:background="@color/black" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/opponent_box"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textview.MaterialTextView
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn"
            android:textSize="32sp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:id="@+id/opponet_turn"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="32sp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/red"
            android:id="@+id/opponent_score"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="24sp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/red"
            android:id="@+id/opponent_name"/>
    </LinearLayout>
</RelativeLayout>